# jake

./: Makefile  README.md  shell.nix
backend/: Cargo.toml  real.db
backend/src/: conversation.rs  editor.rs  frontend.rs  main.rs  model_server.rs  mpty.rs  nexos.rs  openai.rs  remote_server.rs  templates.rs  token.rs
core/: main.py  merge.sh  mistralif.yml  mistralpretrain.yml  mistraltr.yml  pretrain.sh  run.sh  train.sh
docker/: Dockerfile.base
inference_server/: main.py  requirements.txt
templates/: command_format.txt  conversation.txt  conversation_snippet.txt  get_summary.txt  prompt.example  prompt.template  start_inference.template
