[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
jammdb = "0.10.0"
openai_api_rust = "0.1.8"
reqwest = { version = "0.11.20", features = ["json"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tera = "1.19.1"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.4.1", features = ["v4"] }
